--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ djangorestframework-camel-case==1.2.0
 django-oauth-toolkit==1.5.0
 django-filter==21.1
 markdown==3.3.6
-psycopg2==2.6.1
-gunicorn==19.4.1
+psycopg2-binary==2.9.2
+gunicorn==20.1.0
 
